Agregar a perfil, agregar comentarios

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -109,4 +109,94 @@
     <servlet-name>GetConversation</servlet-name>
     <url-pattern>/controllers/get/conversation</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SendMessage</display-name>
+    <servlet-name>SendMessage</servlet-name>
+    <servlet-class>programLibraries.controllers.SendMessage</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SendMessage</servlet-name>
+    <url-pattern>/controllers/send/message</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SetReaction</display-name>
+    <servlet-name>SetReaction</servlet-name>
+    <servlet-class>programLibraries.controllers.SetReaction</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SetReaction</servlet-name>
+    <url-pattern>/controllers/set/reaction</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Follow</display-name>
+    <servlet-name>Follow</servlet-name>
+    <servlet-class>programLibraries.controllers.Follow</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Follow</servlet-name>
+    <url-pattern>/controllers/follow</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Connect</display-name>
+    <servlet-name>Connect</servlet-name>
+    <servlet-class>programLibraries.controllers.Connect</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Connect</servlet-name>
+    <url-pattern>/controllers/connect</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddSkill</display-name>
+    <servlet-name>AddSkill</servlet-name>
+    <servlet-class>programLibraries.controllers.AddSkill</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddSkill</servlet-name>
+    <url-pattern>/controllers/addskill</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddAchievement</display-name>
+    <servlet-name>AddAchievement</servlet-name>
+    <servlet-class>programLibraries.controllers.AddAchievement</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddAchievement</servlet-name>
+    <url-pattern>/controllers/addachievement</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddEducation</display-name>
+    <servlet-name>AddEducation</servlet-name>
+    <servlet-class>programLibraries.controllers.AddEducation</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddEducation</servlet-name>
+    <url-pattern>/controllers/addeducation</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddExperience</display-name>
+    <servlet-name>AddExperience</servlet-name>
+    <servlet-class>programLibraries.controllers.AddExperience</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddExperience</servlet-name>
+    <url-pattern>/controllers/addexperience</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PostComment</display-name>
+    <servlet-name>PostComment</servlet-name>
+    <servlet-class>programLibraries.controllers.PostComment</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PostComment</servlet-name>
+    <url-pattern>/controllers/post/comment</url-pattern>
+  </servlet-mapping>
 </web-app>
